# mcp-cli

./: .gitignore  AGENTS.md  README.md  README_ZH.md  mcp.json  pyproject.toml
dev/active/mcp-cli/: mcp-cli-context.md  mcp-cli-plan.md  mcp-cli-tasks.md
mcp_cli/: __init__.py  client.py  config.py  main.py  schema.py
tests/: test_help_and_schema.py
