[project]
name = "mcp-cli"
version = "0.1.0"
description = "Expose MCP servers' tools as local CLI subcommands."
requires-python = ">=3.10"
authors = [
  { name = "mcp-cli" },
]
dependencies = [
  "mcp",
  "click>=8.0",
  "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
"mcp-tool" = "mcp_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pyright]
include = ["mcp_cli", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportDeprecated = "error"
